--- a/FirstTestNGProject/test-output/old/Default suite/methods-alphabetical.html
+++ b/FirstTestNGProject/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aaae78">  <td>24/03/28 13:42:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginSection.setUp()[pri:0, instance:bankpackage.LoginSection@6c80d78a]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="aaae78">  <td>24/03/28 13:42:42</td>   <td>9119</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginSection.tearDown()[pri:0, instance:bankpackage.LoginSection@6c80d78a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="aaae78">  <td>24/03/28 13:42:41</td>   <td>7750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginSection.testValidLogin()[pri:0, instance:bankpackage.LoginSection@6c80d78a]">testValidLogin</td> 
+<tr bgcolor="9fe9b6">  <td>24/03/29 02:10:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MobileListPage.afterClass()[pri:0, instance:ecommercepackage.MobileListPage@42e99e4a]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/03/29 02:10:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MobileListPage.afterClass()[pri:0, instance:ecommercepackage.MobileListPage@42e99e4a]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/03/29 02:10:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MobileListPage.afterClass()[pri:0, instance:ecommercepackage.MobileListPage@42e99e4a]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/03/29 02:10:49</td>   <td>-6634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MobileListPage.beforeClass()[pri:0, instance:ecommercepackage.MobileListPage@42e99e4a]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/03/29 02:10:49</td>   <td>-6634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MobileListPage.beforeClass()[pri:0, instance:ecommercepackage.MobileListPage@42e99e4a]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/03/29 02:10:49</td>   <td>-6634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MobileListPage.beforeClass()[pri:0, instance:ecommercepackage.MobileListPage@42e99e4a]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/03/29 02:10:36</td>   <td>-19318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MobileListPage.testAddMoreProductThanAvailable()[pri:0, instance:ecommercepackage.MobileListPage@42e99e4a]">testAddMoreProductThanAvailable</td> 
+  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/03/29 02:10:45</td>   <td>-10101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MobileListPage.testCostProductAreEqual()[pri:0, instance:ecommercepackage.MobileListPage@42e99e4a]">testCostProductAreEqual</td> 
+  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>24/03/29 02:10:53</td>   <td>-1845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MobileListPage.testSortedMobileListPageByName()[pri:0, instance:ecommercepackage.MobileListPage@42e99e4a]">testSortedMobileListPageByName</td> 
   <td>main@925858445</td>   <td></td> </tr>
 </table>
