changin to implicit wait

--- a/FirstTestNGProject/test-output/old/Default suite/methods-not-run.html
+++ b/FirstTestNGProject/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>ecommercepackage.MobileListPage.testCostProductAreEqual</td></tr>
+<tr><td>ecommercepackage.MobileListPage.testAddMoreProductThanAvailable</td></tr>
+<tr><td>ecommercepackage.MobileListPage.testCompareTwoProducts</td></tr>
+<tr><td>ecommercepackage.MobileListPage.testSortedMobileListPageByName</td></tr>
 </table>
